[package]
name = "rand_krull"
version = "0.1.0"
authors = ["Sami Perttu <Sami.Perttu@gmail.com>"]
edition = "2018"
description = "Krull64 non-cryptographic RNG (random number generator)"
license = "MIT"
categories = ["algorithms", "no-std"]
keywords = ["random", "RNG"]
repository = "https://github.com/SamiPerttu/rand_krull"
readme = "README.md"

[features]
default = []

[dependencies]
rand_core = "0.5"
wrapping_arithmetic = "0.1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
