[package]
name = "rand_krull"
version = "0.2.0"
authors = ["Sami Perttu <Sami.Perttu@gmail.com>"]
edition = "2018"
description = "Krull64/65 random number generators."
license = "MIT"
categories = ["algorithms", "no-std"]
keywords = ["random", "RNG"]
repository = "https://github.com/SamiPerttu/rand_krull"
readme = "README.md"

[features]
default = []

[dependencies]
rand_core = "0.6.3"
wrapping_arithmetic = "0.1.0"
serde = { version = "1.0.136", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
